# usort

./: .flake8  .gitignore  .mailmap  .pre-commit-hooks.yaml  .readthedocs.yml  .vars.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  README.md  check_backcompat.py  check_copyright.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: api.rst  changelog.rst  conf.py  contributing.rst  guide.rst  index.rst  maintainers.rst  versioning.rst  why.rst
docs/_static/: custom.css
docs/_templates/: facebook.html  meta.html
usort/: __init__.py  __main__.py  api.py  cli.py  config.py  sorting.py  stdlibs.py  translate.py  types.py  util.py
usort/stdlibs/: __init__.py  all.py  py2.py  py27.py  py3.py  py35.py  py36.py  py37.py  py38.py
usort/tests/: __init__.py  __main__.py  cli.py  config.py  functional.py  sort_key.py  sorting.py  stdlibs.py  translate.py  types.py  util.py
