[metadata]
name = usort
description = A small, safe import sorter
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/facebookincubator/usort
author = Tim Hatch, Facebook
author_email = thatch@fb.com

[options]
packages = usort
setup_requires =
    setuptools_scm
    setuptools >= 38.3.0
python_requires = >=3.6
install_requires = LibCST

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = usort/*
omit = usort/tests/*

[coverage:report]
fail_under = 70
precision = 1
show_missing = True
skip_covered = True

[isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = False
include_trailing_comma = True
use_parentheses = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py36, py37, py38

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make test
setenv =
    py{36,37,38}: COVERAGE_FILE={envdir}/.coverage

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
